fixed some more spacing

--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,3 @@
   flex-wrap: wrap;
   margin-top: 50px;
 }
-
-.confetti {
-  width: 1250px;
-  grid-area: confetti;
-}
-
-/* .grid {
-  display: grid;
-  height: 610px;
-  grid-template: 180px 250px 180px/ 1fr 1fr 1fr;
-  grid-template-areas: "header header header"
-                       "controls timer rightUpper"
-                       "controls timer resources";
-} */
