--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,5 +1,4 @@
 .header {
-    grid-area: header;
     margin-bottom: 0px;
     height: 75px;
     margin-right: 0px;
