--- a/src/Components/History.css
+++ b/src/Components/History.css
@@ -1,5 +1,4 @@
 .pageBottom {
-  grid-area: history;
   margin-bottom: 0px;
   height: 100%;
   background-color: lightgray;
