--- a/src/Components/Resources.css
+++ b/src/Components/Resources.css
@@ -1,5 +1,4 @@
 .resources {
-    grid-area: resources;
     padding-top: 20px;
 }
 
